<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/main_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ApplicationName"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/calculationContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calculationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/buttonsLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/number1_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5">

                    <EditText
                        android:id="@+id/editTextNumber1"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:autofillHints="3"
                        android:inputType="number"
                        android:textSize="18sp"
                        android:textColor="@color/editTextColor"
                        android:hint="@string/number_1"
                        android:textColorHint="@color/editTextHintColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/number2_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5">

                    <EditText
                        android:id="@+id/editTextNumber2"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:inputType="number"
                        android:textSize="18sp"
                        android:textColor="@color/editTextColor"
                        android:hint="@string/number_2"
                        android:textColorHint="@color/editTextHintColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:autofillHints="2" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonsLayout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button1_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5">

                    <Button
                        android:id="@+id/buttonAdd"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/plusAction"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonMultiply"
                        android:layout_marginTop="10dp"
                        android:layout_width="90dp"
                        android:text="@string/multiplyAction"
                        android:textSize="30sp"
                        android:textColor="@color/buttonTextColor"
                        android:background="@color/colorPrimary"
                        app:layout_constraintTop_toBottomOf="@id/buttonAdd"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="10dp"
                        android:layout_height="wrap_content" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button2_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5">

                    <Button
                        android:id="@+id/buttonSubtract"
                        android:layout_width="90dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/subtractAction"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/buttonDivide"
                        android:layout_marginTop="10dp"
                        android:layout_width="90dp"
                        android:text="@string/divideAction"
                        android:textSize="30sp"
                        android:textColor="@color/buttonTextColor"
                        android:background="@color/colorPrimary"
                        app:layout_constraintTop_toBottomOf="@id/buttonSubtract"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>